--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,8 @@
         "filament/filament": "^3.2",
         "filament/spatie-laravel-media-library-plugin": "^3.2",
         "laravel/framework": "^11.0",
-        "laravel/tinker": "^2.9"
+        "laravel/tinker": "^2.9",
+        "spatie/laravel-medialibrary": "^11.4"
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
